--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <div class="container__left">
         <h4 style="color: black;">🎨SketchSphere –</h4>
         <h1>Where Creativity Takes Shape!</h1>
-<!--       <div class="container__btn">
+      <div class="container__btn">
           <a href="#contact"><button class="btn">CONTACT</button></a>
-        </div>--> 
+        </div>
       </div>
       <div class="container__right">
         <div class="images">
@@ -55,11 +55,11 @@
           </p>
         </div>
       </div>
-      <div class="location">
+  <!--    <div class="location">
         <span><i class="ri-phone-fill" style="color: white;"></i></span>
         <a href="#contact">CONTACT</a>
       </div>
-<!--
+
       <div class="socials">
         <span>
           <a href="#"><i class="ri-facebook-fill"></i></a>
