--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
           </p>
           <ul class="footer__socials">
             <li>
-              <a href="#"><i class="ri-facebook-fill"></i></a>
+             <a href="https://github.com/srishti-tech"><i class='bx bxl-github'></i></a>           
             </li>
             <li>
-              <a href="#"><i class="ri-twitter-fill"></i></a>
+               <a href="https://www.linkedin.com/in/srishti26dec9/"><i class='bx bxl-linkedin'></i></a>
             </li>
             <li>
-              <a href="#"><i class="ri-instagram-line"></i></a>
+           <a href="https://www.instagram.com/art_up06/"><i class='bx bxl-instagram-alt'></i></a>
             </li>
           </ul>
         </div>
