--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
           </p>
           <ul class="footer__socials">
             <li>
-             <a href="https://github.com/srishti-tech"><i class='bx bxl-github'></i></a>           
+             <a href="https://github.com/srishti-tech"><i class="ri-github-line"></i></a>           
             </li>
             <li>
-               <a href="https://www.linkedin.com/in/srishti26dec9/"><i class='bx bxl-linkedin'></i></a>
+               <a href="https://www.linkedin.com/in/srishti26dec9/"></a>
             </li>
             <li>
-           <a href="https://www.instagram.com/art_up06/"><i class='bx bxl-instagram-alt'></i></a>
+           <a href="https://www.instagram.com/art_up06/"><i class="ri-instagram-line"></a>
             </li>
           </ul>
         </div>
