--- a/index.html
+++ b/index.html
@@ -236,14 +236,11 @@
           </p>
           <ul class="footer__socials">
             <li>
-             <a href="https://github.com/srishti-tech"><i class="ri-github-line"></i></a>           
+              <a href="https://github.com/srishti-tech"><i class="ri-github-line"></i></a>  
             </li>
             <li>
-               <a href="https://www.linkedin.com/in/srishti26dec9/"></a>
-            </li>
-            <li>
-           <a href="https://www.instagram.com/art_up06/"><i class="ri-instagram-line"></a>
-            </li>
+              <a href="https://www.instagram.com/art_up06/"><i class="ri-instagram-line"></i></a>
+            </li>      
           </ul>
         </div>
         <div class="footer__col">
